--- a/Helpfull/Helpfull.csproj
+++ b/Helpfull/Helpfull.csproj
@@ -2,11 +2,20 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>1.0-pre1</Version>
+    <Version>1.0-dev1</Version>
     <Authors>No Name Pro</Authors>
-    <Description>A helpfull library for every C#-Developer</Description>
+    <Description>🗃 A helpfull library for every C#-Developer</Description>
     <Copyright>by No Name Pro</Copyright>
     <RepositoryUrl>https://github.com/NoNamePro0/Helpfull</RepositoryUrl>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
